Fix box3 and box1 widths to 50% in order to wrap nav elements correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ h3 {
         font-size: 80%;
         display: flex;
         justify-content: space-evenly;
-        width: 33%;
+        width: 50%;
     
     }
 
@@ -426,7 +426,7 @@ h3 {
         font-size: 80%;
         display: flex;
         justify-content: space-evenly;
-        width: 33%;
+        width: 50%;
         
     }
 
